# Esd.ABH

./: CMakeLists.txt  README.md  backup.txt  main.c  profile_management.c  profile_management.h  terminal_debug_menu.c  user_interface.c  user_interface.h  user_operations.c  user_operations.h  utilities.c  utilities.h
Debug/: terminal_debug_menu.c  terminal_debug_menu.h
Libraries/cimgui/: README.md  cimgui.cpp  cimgui.h
Libraries/cimgui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_truetype.h
Libraries/sokol/: shell.html  sokol.c  sokol_app.h  sokol_gfx.h  sokol_glue.h  sokol_imgui.h
UI/: user_interface.c  user_interface.h  window_navigation_control.c  window_navigation_control.h
src/: main.c
src/Database/: db_management.c  db_management.h  db_operations.c
src/Datacollection/: data_collection_management.c  data_collection_management.h  notes.txt
src/Datacollection/Stores/: 365coop.c  365coop.h  bilka.c  bilka.h  foetex.c  foetex.h  meny.c  meny.h  netto.c  netto.h  rema1000.c  rema1000.h  teststore.c  teststore.h
src/Definitions/: enum_definitions.h  struct_definitions.h
src/Geography/: google_maps.c  google_maps.h
src/Header/: profile_management.h  user_operations.h  utilities.h
src/Source/: profile_management.c  user_operations.c  utilities.c
src/UI/: ui_window_control.c  ui_window_control.h  ui_window_design.c  ui_window_design.h  ui_window_settings.c  ui_window_settings.h
src/UI/Header/: ui_window_settings.h  user_interface.h  window_navigation_control.h
src/UI/Source/: ui_window_settings.c  user_interface.c  window_navigation_control.c
src/Utilities/: utilities.c  utilities.h
